@@ -20,7 +20,7 @@ if(WIN32)
     set(FREETYPE_FOUND 1)
     set(FREETYPE_LIBRARIES ${FREETYPE_LIBRARY})
 elseif(APPLE)
-    find_path(FREETYPE_INCLUDE_DIRS NAMES freetype/freetype.h PATHS "/Library/Frameworks/FreeType.Framework/Versions/2.4/unix/include")
+    find_path(FREETYPE_INCLUDE_DIRS NAMES freetype/freetype.h PATHS "/usr/local/include/freetype2")
     find_library(FREETYPE_LIBRARY NAMES freetype PATHS "/Library/Frameworks/FreeType.Framework/Versions/2.4/")
     include_directories(/Library/Frameworks/FreeType.Framework/Versions/2.4/unix/include)
     set(FREETYPE_FOUND 1)
