@@ -1,7 +1,7 @@
 ////////////////////////////////////////////////////////////////////////////////////////
 // Copyright(C) 1999 - 2005 id Software LLC, a ZeniMax Media company.
 // Copyright(C) 2005 Stuart Dalton(badcdev@gmail.com)
-// Copyright(C) 2011 - 2021 Dusan Jocic <dusanjocic@msn.com>
+// Copyright(C) 2011 - 2022 Dusan Jocic <dusanjocic@msn.com>
 //
 // This file is part of OpenWolf.
 //
@@ -20,13 +20,17 @@
 // Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110 - 1301  USA
 //
 // -------------------------------------------------------------------------------------
-// File name:   snd_al_local.hpp
+// File name:   sndSystemAL_local.hpp
 // Created:
 // Compilers:   Microsoft (R) C/C++ Optimizing Compiler Version 19.26.28806 for x64,
-//              gcc (Ubuntu 9.3.0-10ubuntu2) 9.3.0
+//              gcc (Ubuntu 9.3.0-10ubuntu2) 9.3.0,
+//              AppleClang 9.0.0.9000039
 // Description: Local definitions for the OpenAL sound system
 // -------------------------------------------------------------------------------------
 ////////////////////////////////////////////////////////////////////////////////////////
+
+#ifndef __SNDSYSTEM_AL_LOCAL_HPP__
+#define __SNDSYSTEM_AL_LOCAL_HPP__
 
 /**
  * Console variables
@@ -226,3 +230,4 @@ void trap_Hunk_FreeTempMemory(void *buf);
 void *trap_Malloc(uint64 size);
 void trap_Free(void *ptr);
 
+#endif //!__SNDSYSTEMAL_LOCAL_HPP__
