@@ -2,6 +2,7 @@
 	* [cMake] Updated CMakeLists.txt
 	* [Authentication Server] Fixed compiling Authentication server on the MacOS platform
 	* [Master Server] Fixed compiling master server the MacOS platform
+	* [SoundSystem] Fixed compiling OpenAL subsystem on the MacOS platform
 
 2022-04-30 Dusan Jocic <dusanjocic@msn.com>
 	* [Engine] Fix a flexible array member of size 4
